# sdl-shared

./: .gitignore  CMakeLists.txt  README.md  build.zig
assets/: default.ttf.info
include/: SDL_share.h  steno.h
src/: CMakeLists.txt  create.c  init.c  input.c  main.c  query.c  text.c
